--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -1954,8 +1954,7 @@ Bonus when intercepting [amount]% =
 Ambush I = 
  # Requires translation!
 Ambush II = 
- # Requires translation!
-Haka War Dance = 
+Haka War Dance = Baile de la guerra Haka
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
  # Requires translation!
